// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockList renders a border around list 1`] = `
<BlockList
  border="group"
>
  <div
    className="list listBorderGroup"
  >
    goose
  </div>
</BlockList>
`;

exports[`BlockList renders a bottom border on the list 1`] = `
<BlockList
  border="bottom"
>
  <div
    className="list listBorderBottom"
  >
    goose
  </div>
</BlockList>
`;

exports[`BlockList renders content that is passed in 1`] = `
<BlockList>
  <div
    className="list"
  >
    goose
  </div>
</BlockList>
`;

exports[`BlockListItem renders content that is passed in 1`] = `
<BlockListItem>
  <div
    className="item"
  >
    goose
  </div>
</BlockListItem>
`;

exports[`BlockListItemLink forwards custom props 1`] = `
<BlockListItemLink
  href="https://thumbtack.com"
  target="_blank"
>
  <a
    className="itemLink"
    href="https://thumbtack.com"
    target="_blank"
  >
    goose
  </a>
</BlockListItemLink>
`;

exports[`BlockListItemLink renders a class that is passed in 1`] = `
<BlockListItemLink
  className="red"
  href="https://thumbtack.com"
>
  <a
    className="itemLink red"
    href="https://thumbtack.com"
  >
    goose
  </a>
</BlockListItemLink>
`;

exports[`BlockListItemLink renders a link 1`] = `
<BlockListItemLink
  href="https://thumbtack.com"
>
  <a
    className="itemLink"
    href="https://thumbtack.com"
  >
    goose
  </a>
</BlockListItemLink>
`;

exports[`BlockListItemLink renders content that is passed in 1`] = `
<BlockListItemLink
  href="https://thumbtack.com"
>
  <a
    className="itemLink"
    href="https://thumbtack.com"
  >
    goose
  </a>
</BlockListItemLink>
`;
